Fix alert z-index, color and add edit profile usage

--- a/presto/resources/assets/sass/index.scss
+++ b/presto/resources/assets/sass/index.scss
@@ -42,6 +42,7 @@
   border-radius: 16px;
   animation: slideUp .5s;
   animation-timing-function: ease-out;
+  z-index: 1000;
 
   .alert-message {
     flex: 2 0 0;
